Adicionadas respostas kerberos.
Servidor configurado.

--- a/Trabalho 1/Apache2.2/conf/extra/httpd-ssl.conf
+++ b/Trabalho 1/Apache2.2/conf/extra/httpd-ssl.conf
@@ -98,7 +98,7 @@ SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
 #   in mind that if you have both an RSA and a DSA certificate you
 #   can configure both in parallel (to also allow the use of DSA
 #   ciphers, etc.)
-SSLCertificateFile "conf/ssl.crt/<Server Certificate>.pem"
+SSLCertificateFile "conf/ssl.crt/localhost.pem"
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -115,7 +115,7 @@ SSLCertificateFile "conf/ssl.crt/<Server Certificate>.pem"
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convinience.
-SSLCertificateChainFile "conf/ssl.crt/<Server Certificate Chain>.pem"
+SSLCertificateChainFile "conf/ssl.crt/chain.pem"
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -125,7 +125,7 @@ SSLCertificateChainFile "conf/ssl.crt/<Server Certificate Chain>.pem"
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
 #SSLCACertificatePath "conf/ssl.crt"
-SSLCACertificateFile "conf/ssl.crt/<CA Certificates Accepted>.pem"
+SSLCACertificateFile "conf/ssl.crt/chain_ca2.pem"
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -143,7 +143,7 @@ SSLCACertificateFile "conf/ssl.crt/<CA Certificates Accepted>.pem"
 #   number which specifies how deeply to verify the certificate
 #   issuer chain before deciding the certificate is not valid.
 SSLVerifyClient require
-SSLVerifyDepth  4
+SSLVerifyDepth  3
 
 #   Access Control:
 #   With SSLRequire you can do per-directory access control based
